--- a/src/pages/forms.html
+++ b/src/pages/forms.html
@@ -20,7 +20,7 @@
       href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css"
     />
 
-    <title>Adasgo - Admin Dashboard</title>
+    <title>Deteksi Stunting - Admin Dashboard</title>
   </head>
   <body>
     <!-- Main Container -->
@@ -35,7 +35,7 @@
             <div>
               <div class="sidebar-title text-white px-2">
                 <i class="block bx bxs-castle scale-150"></i>
-                <h2 class="mt-1 text-xl font-bold">AdasGo</h2>
+                <h2 class="mt-1 text-xl font-bold">Deteksi Stunting</h2>
               </div>
               <span class="mt-4 block border-t border-slate-100"></span>
             </div>
