--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://figoarbiansyah.github.io/adasgo" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <title>Adasgo</title>
+    <title>Deteksi Stunting</title>
     <style>
       * {
         font-family: "Poppins", sans-serif;
@@ -31,40 +31,40 @@
             class="py-4 px-10 pb-8 border-t border-b border-dashed text-center"
           >
             <h1 class="md:text-5xl text-4xl font-extrabold pb-4">
-              Free Tailwind CSS Admin Dashboard Template
+              Ini adalah halaman awal
             </h1>
             <p
               class="text-slate-500 text-center pt-5 pb-8 border-t border-b border-dashed text-lg"
             >
-              <span class="font-bold">Adasgo</span> Fresh and elegant looking
-              admin template that you can use.
+              <span class="font-bold">Deteksi Stunting</span> adalah aplikasi
+              yang digunakan untuk mendeteksi stunting pada anak balita.
             </p>
             <div class="flex justify-center items-center gap-3">
-              <a href="https://github.com/FigoArbiansyah/adasgo" class="">
-                <button
-                  class="border-2 mt-10 px-4 py-3 border-slate-800 rounded text-slate-800 text-xl hover:bg-slate-800 hover:text-white transition-all ease duration-300"
-                >
-                  Github
-                </button>
-              </a>
               <a href="./src">
                 <button
                   class="transition-all ease duration-300 mt-10 mx-auto py-3 px-14 bg-gradient-to-br from-blue-500 to-cyan-500 text-white hover:-translate-y-2 _hover:from-cyan-500 _hover:to-blue-500 text-xl rounded"
                 >
-                  Demo
+                  Masuk
+                </button>
+              </a>
+              <a href="https://github.com/FigoArbiansyah/adasgo" class="">
+                <button
+                  class="border-2 mt-10 px-4 py-3 border-slate-800 rounded text-slate-800 text-xl hover:bg-slate-800 hover:text-white transition-all ease duration-300"
+                >
+                  Daftar
                 </button>
               </a>
             </div>
           </div>
         </div>
       </section>
-      <div class="-mt-36 py-14 px-5 bg-gradient-custom">
+      <!-- <div class="-mt-36 py-14 px-5 bg-gradient-custom">
         <img
           src="./demo-image.png"
           class="md:w-1/2 w-full mx-auto rounded-lg shadow-lg border"
           alt=""
         />
-      </div>
+      </div> -->
     </main>
   </body>
 </html>
