--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                   Masuk
                 </button>
               </a>
-              <a href="https://github.com/FigoArbiansyah/adasgo" class="">
+              <!-- <a href="https://github.com/FigoArbiansyah/adasgo" class="">
                 <button
                   class="border-2 mt-10 px-4 py-3 border-slate-800 rounded text-slate-800 text-xl hover:bg-slate-800 hover:text-white transition-all ease duration-300"
                 >
                   Daftar
                 </button>
-              </a>
+              </a> -->
             </div>
           </div>
         </div>
