--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="title" content="Adasgo" />
+    <meta name="title" content="Deteksi Stunting" />
     <meta name="description" content="Free Admin Template Tailwind CSS" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Adasgo" />
+    <meta property="og:title" content="Deteksi Stunting" />
     <meta
       property="og:description"
       content="Free Admin Template Tailwind CSS"
     />
     <meta
       property="og:image"
-      content="https://github.com/FigoArbiansyah/adasgo/blob/master/demo-image.png?raw=true"
+      content="https://github.com/FigoArbiansyah/Deteksi Stunting/blob/master/demo-image.png?raw=true"
     />
-    <meta property="og:url" content="https://figoarbiansyah.github.io/adasgo" />
+    <meta property="og:url" content="https://figoarbiansyah.github.io/Deteksi Stunting" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>Deteksi Stunting</title>
@@ -47,7 +47,7 @@
                   Masuk
                 </button>
               </a>
-              <!-- <a href="https://github.com/FigoArbiansyah/adasgo" class="">
+              <!-- <a href="https://github.com/FigoArbiansyah/Deteksi Stunting" class="">
                 <button
                   class="border-2 mt-10 px-4 py-3 border-slate-800 rounded text-slate-800 text-xl hover:bg-slate-800 hover:text-white transition-all ease duration-300"
                 >
