--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta name="title" content="Deteksi Stunting" />
-    <meta name="description" content="Free Admin Template Tailwind CSS" />
+    <meta name="description" content="Webapp Deteksi Stunting pada Balita" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Deteksi Stunting" />
     <meta
       property="og:description"
-      content="Free Admin Template Tailwind CSS"
+      content="Webapp Deteksi Stunting pada Balita"
     />
     <meta
       property="og:image"
