Refactor meta tags and update link to source index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       property="og:image"
       content="https://github.com/FigoArbiansyah/Deteksi Stunting/blob/master/demo-image.png?raw=true"
     />
-    <meta property="og:url" content="https://figoarbiansyah.github.io/Deteksi Stunting" />
+    <meta
+      property="og:url"
+      content="https://figoarbiansyah.github.io/Deteksi Stunting"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>Deteksi Stunting</title>
@@ -40,7 +43,7 @@
               yang digunakan untuk mendeteksi stunting pada anak balita.
             </p>
             <div class="flex justify-center items-center gap-3">
-              <a href="./src">
+              <a href="./src/index.html">
                 <button
                   class="transition-all ease duration-300 mt-10 mx-auto py-3 px-14 bg-gradient-to-br from-blue-500 to-cyan-500 text-white hover:-translate-y-2 _hover:from-cyan-500 _hover:to-blue-500 text-xl rounded"
                 >
